graficos estadisticas dashboard y detalles

--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -201,11 +201,11 @@ h2 {
   margin-top: 30px;
   margin-bottom: 30px;
 }
-
+/*
 #grafico canvas, #rubrosChart {
   width: 500px !important;
   height: 500px !important;
-}
+}*/
 
 /*........fin card......*/
 
